Add scope, alternate controller solutions

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,9 +5,19 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - akuity.io
+  - ""
   resources:
   - namespaces
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - '*'
+  resources:
+  - '*'
   verbs:
   - create
   - delete
@@ -16,20 +26,6 @@ rules:
   - patch
   - update
   - watch
-- apiGroups:
-  - akuity.io
-  resources:
-  - namespaces/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - akuity.io
-  resources:
-  - namespaces/status
-  verbs:
-  - get
-  - patch
-  - update
 - apiGroups:
   - core.akuity.io
   resources:
