--- a/config/crd/bases/core.akuity.io_namespaceclasses.yaml
+++ b/config/crd/bases/core.akuity.io_namespaceclasses.yaml
@@ -11,8 +11,10 @@ spec:
     kind: NamespaceClass
     listKind: NamespaceClassList
     plural: namespaceclasses
+    shortNames:
+    - nsclass
     singular: namespaceclass
-  scope: Namespaced
+  scope: Cluster
   versions:
   - name: v1alpha1
     schema:
@@ -39,13 +41,267 @@ spec:
           spec:
             description: NamespaceClassSpec defines the desired state of NamespaceClass.
             properties:
-              foo:
-                description: Foo is an example field of NamespaceClass. Edit namespaceclass_types.go
-                  to remove/update
+              inheritedResources:
+                description: K8sAPIAction defines the target K8s API resource to create.
+                items:
+                  properties:
+                    apiVersion:
+                      type: string
+                    kind:
+                      type: string
+                    metadata:
+                      description: |-
+                        Metadata contains the metadata for the resource (only name is required)
+                        Namespace will be set by the controller to match the parent namespace
+                      properties:
+                        annotations:
+                          additionalProperties:
+                            type: string
+                          description: Annotations to apply to the resource
+                          type: object
+                        labels:
+                          additionalProperties:
+                            type: string
+                          description: Labels to apply to the resource
+                          type: object
+                        name:
+                          description: Name of the resource
+                          type: string
+                      required:
+                      - name
+                      type: object
+                    template:
+                      description: SpecTemplate contains the spec of the CR to create,
+                        of type GVK in this same struct.
+                      type: object
+                      x-kubernetes-preserve-unknown-fields: true
+                  required:
+                  - apiVersion
+                  - kind
+                  - metadata
+                  type: object
+                type: array
+              resourceRefs:
+                items:
+                  description: ObjectReference contains enough information to let
+                    you inspect or modify the referred object.
+                  properties:
+                    apiVersion:
+                      description: API version of the referent.
+                      type: string
+                    fieldPath:
+                      description: |-
+                        If referring to a piece of an object instead of an entire object, this string
+                        should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2].
+                        For example, if the object reference is to a container within a pod, this would take on a value like:
+                        "spec.containers{name}" (where "name" refers to the name of the container that triggered
+                        the event) or if no container name is specified "spec.containers[2]" (container with
+                        index 2 in this pod). This syntax is chosen only to have some well-defined way of
+                        referencing a part of an object.
+                      type: string
+                    kind:
+                      description: |-
+                        Kind of the referent.
+                        More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+                      type: string
+                    name:
+                      description: |-
+                        Name of the referent.
+                        More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                      type: string
+                    namespace:
+                      description: |-
+                        Namespace of the referent.
+                        More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                      type: string
+                    resourceVersion:
+                      description: |-
+                        Specific resourceVersion to which this reference is made, if any.
+                        More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency
+                      type: string
+                    uid:
+                      description: |-
+                        UID of the referent.
+                        More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids
+                      type: string
+                  type: object
+                  x-kubernetes-map-type: atomic
+                type: array
+              templateNamespace:
+                description: |-
+                  We can pre-create each resource in a reference namespace and just have ObjectRef's
+                  to each, then we copy over into the desired namespace.
+                  This may make sense if the objects we're dealing with are simple *Template* CRDs.
+                  Similar to how CAPI uses template references. But then we'd need <XXX>Template CRDs
+                  but since the guideline is *any* resource - which may include daemonsets, RBAC, PVCs,
+                  or ever other CRs, we don't want to create these actual resources(they consume phys resources)
+                  But leaving this here as an alternative
                 type: string
             type: object
           status:
             description: NamespaceClassStatus defines the observed state of NamespaceClass.
+            properties:
+              conditions:
+                description: Conditions defines the state of the NamespaceClass.
+                items:
+                  description: Condition defines an observation of a Cluster API resource
+                    operational state.
+                  properties:
+                    lastTransitionTime:
+                      description: |-
+                        Last time the condition transitioned from one status to another.
+                        This should be when the underlying condition changed. If that is not known, then using the time when
+                        the API field changed is acceptable.
+                      format: date-time
+                      type: string
+                    message:
+                      description: |-
+                        A human readable message indicating details about the transition.
+                        This field may be empty.
+                      type: string
+                    reason:
+                      description: |-
+                        The reason for the condition's last transition in CamelCase.
+                        The specific API may choose whether or not this field is considered a guaranteed API.
+                        This field may be empty.
+                      type: string
+                    severity:
+                      description: |-
+                        severity provides an explicit classification of Reason code, so the users or machines can immediately
+                        understand the current situation and act accordingly.
+                        The Severity field MUST be set only when Status=False.
+                      type: string
+                    status:
+                      description: status of the condition, one of True, False, Unknown.
+                      type: string
+                    type:
+                      description: |-
+                        type of condition in CamelCase or in foo.example.com/CamelCase.
+                        Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
+                        can be useful (see .node.status.conditions), the ability to deconflict is important.
+                      type: string
+                  required:
+                  - lastTransitionTime
+                  - status
+                  - type
+                  type: object
+                type: array
+              managedNamespaces:
+                description: ManagedNamespaces is a list of namespaces that had all
+                  resources successfully aplied
+                items:
+                  type: string
+                type: array
+              namespaceResources:
+                additionalProperties:
+                  items:
+                    description: ObjectReference contains enough information to let
+                      you inspect or modify the referred object.
+                    properties:
+                      apiVersion:
+                        description: API version of the referent.
+                        type: string
+                      fieldPath:
+                        description: |-
+                          If referring to a piece of an object instead of an entire object, this string
+                          should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2].
+                          For example, if the object reference is to a container within a pod, this would take on a value like:
+                          "spec.containers{name}" (where "name" refers to the name of the container that triggered
+                          the event) or if no container name is specified "spec.containers[2]" (container with
+                          index 2 in this pod). This syntax is chosen only to have some well-defined way of
+                          referencing a part of an object.
+                        type: string
+                      kind:
+                        description: |-
+                          Kind of the referent.
+                          More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+                        type: string
+                      name:
+                        description: |-
+                          Name of the referent.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                        type: string
+                      namespace:
+                        description: |-
+                          Namespace of the referent.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                        type: string
+                      resourceVersion:
+                        description: |-
+                          Specific resourceVersion to which this reference is made, if any.
+                          More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency
+                        type: string
+                      uid:
+                        description: |-
+                          UID of the referent.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids
+                        type: string
+                    type: object
+                    x-kubernetes-map-type: atomic
+                  type: array
+                description: NamespaceResources tracks resources applied to each namespace
+                  - only used by namespace controller
+                type: object
+              ready:
+                default: false
+                description: Ready indicates overall Ready status from conditions
+                  summary.
+                type: boolean
+              reason:
+                description: Reason indicates the reason why NamespaceClass is in
+                  ready or not state.
+                type: string
+              resourceRefs:
+                description: |-
+                  ResourceRefs lists the resources defined by this NamespaceClass - only used by namespaceclass controller
+                  Used to track what needs to be cleaned up when resources are removed
+                items:
+                  description: ObjectReference contains enough information to let
+                    you inspect or modify the referred object.
+                  properties:
+                    apiVersion:
+                      description: API version of the referent.
+                      type: string
+                    fieldPath:
+                      description: |-
+                        If referring to a piece of an object instead of an entire object, this string
+                        should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2].
+                        For example, if the object reference is to a container within a pod, this would take on a value like:
+                        "spec.containers{name}" (where "name" refers to the name of the container that triggered
+                        the event) or if no container name is specified "spec.containers[2]" (container with
+                        index 2 in this pod). This syntax is chosen only to have some well-defined way of
+                        referencing a part of an object.
+                      type: string
+                    kind:
+                      description: |-
+                        Kind of the referent.
+                        More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+                      type: string
+                    name:
+                      description: |-
+                        Name of the referent.
+                        More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                      type: string
+                    namespace:
+                      description: |-
+                        Namespace of the referent.
+                        More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                      type: string
+                    resourceVersion:
+                      description: |-
+                        Specific resourceVersion to which this reference is made, if any.
+                        More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency
+                      type: string
+                    uid:
+                      description: |-
+                        UID of the referent.
+                        More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids
+                      type: string
+                  type: object
+                  x-kubernetes-map-type: atomic
+                type: array
+            required:
+            - ready
             type: object
         type: object
     served: true
